analysis tab z-index fixxxxxx

--- a/src/modules/SupportServices/styles/ServiceAnalysis.css
+++ b/src/modules/SupportServices/styles/ServiceAnalysis.css
@@ -24,7 +24,7 @@
   position: sticky;
   top: 0;
   background-color: white;
-  z-index: 3;
+  z-index: 0;
   padding-top: 1rem;
 }
 
